--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth:
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.2.0
+  google_sign_in: ^5.2.1
 
 
 
