--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
+  image_picker: ^0.6.3+4
 
 
 
@@ -63,6 +64,11 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/logo1.png
+    - lib/assets/pickup.png
+    - lib/assets/transfer-money.png
+    - lib/assets/coming-soon.png
+    - lib/assets/donasi_icon.png
+    - lib/assets/sound.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
