--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
-  image_picker: ^0.6.3+4
-
+  image_picker: ^0.8.4+4
+  google_maps_flutter: ^2.1.1
 
 
 
