--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
    <application
        android:label="pantisosialciparay"
         android:icon="@mipmap/ic_launcher">
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyB3U4VTWavjw9f079WxTrJqqJYgffBOsb0"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
